...
                android:padding="@dimen/margin_large"
                android:text="@string/ingredients_ac_title"/>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_ac_step_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
...
